Fix stuff outside the explorer ending up beneath spinner on mobile
[#126850459]

--- a/app/assets/stylesheets/betterplace_explorer/_volunteering_list.sass
+++ b/app/assets/stylesheets/betterplace_explorer/_volunteering_list.sass
@@ -22,6 +22,12 @@
     opacity: 0.6
     background: white
 
+  +phone
+    &.loading
+      // ugly solution to make sure that stuff that is placed
+      // below the explorer never ends up beneath the loading-spinner 😢
+      min-height: 210px
+
   .no-results
     p
       font-size: 22px
